influxdb3_pro/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_existing_db_new_table-3.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: mapped WAL content for local catalog
expression: mapped_wal_content
---
min_timestamp_ns: 0
max_timestamp_ns: 1
wal_file_number: 0
ops:
  - Catalog:
      database_id: 0
      database_name: foo
      time_ns: 0
      ops:
        - CreateTable:
            database_id: 0
            database_name: foo
            table_name: pow
            table_id: 3
            field_definitions:
              - name: t1
                id: 8
                data_type: Tag
              - name: f1
                id: 9
                data_type: Boolean
            key: ~
snapshot: ~
