influxdb3_pro/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_field_additions-3.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: "database schema in primary catalog after mapping and applying replica WAL content, table 'bar' should include field 'f4'"
expression: db
---
id: 0
name: foo
tables:
  - - 0
    - table_id: 0
      table_name: bar
      cols:
        - - 2
          - name: f1
            id: 2
            type: bool
            influx_type: field
            nullable: true
        - - 7
          - name: f4
            id: 7
            type: f64
            influx_type: field
            nullable: true
        - - 0
          - name: t1
            id: 0
            type:
              dict:
                - i32
                - str
            influx_type: tag
            nullable: true
        - - 1
          - name: t2
            id: 1
            type:
              dict:
                - i32
                - str
            influx_type: tag
            nullable: true
