influxdb3_pro/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_last_cache_create_already_on_primary-2.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: "database schema for 'foo' db after applying the mapped catalog batch from the replica; it should still have a 'bar' table containing just a single last cache definition"
expression: db_after_applying
---
id: 0
name: foo
tables:
  - - 0
    - table_id: 0
      table_name: bar
      cols:
        - - 2
          - name: f1
            id: 2
            type: bool
            influx_type: field
            nullable: true
        - - 0
          - name: t1
            id: 0
            type:
              dict:
                - i32
                - str
            influx_type: tag
            nullable: true
        - - 1
          - name: t2
            id: 1
            type:
              dict:
                - i32
                - str
            influx_type: tag
            nullable: true
      last_caches:
        - table_id: 0
          table: bar
          name: test_cache
          keys:
            - 0
          vals: ~
          n: 1
          ttl: 3600
      deleted: false
deleted: false
